# media-agent

./: .gitignore  CHANGELOG.md  CLI_DOCUMENTATION.md  README.md  config.yaml  pyproject.toml
.github/workflows/: publish.yml
examples/: example.py  test_agent.py  test_ocr.py  test_pipeline.py  test_qwen.py  test_split.py  usage.py
image_gen/: __init__.py
image_gen/image/: __init__.py  generator.py
image_gen/llm/: __init__.py  qwen.py
image_gen/utils/: __init__.py  downloader.py
media_agent/: __init__.py  __main__.py
media_agent/agent/: __init__.py  agent.py
media_agent/cli/: __init__.py  app.py  commands.py  input_handler.py  progress.py  renderer.py  themes.py
media_agent/cli/components/: __init__.py  header.py  help_overlay.py  tips.py
media_agent/image/: __init__.py  generator.py  nanobanana.py
media_agent/llm/: __init__.py  anthropic_llm.py  base.py  huggingface_llm.py  ollama_llm.py  openai_llm.py  qwen.py  registry.py  settings.py
media_agent/tools/: __init__.py  downloader.py  image_tool.py
media_utils/: __init__.py
media_utils/agent/: __init__.py  agent.py
media_utils/ocr/: __init__.py  deepseek.py
media_utils/utils/: __init__.py  downloader.py
models/: .gitkeep
output/: .gitkeep
tests/: __init__.py  conftest.py  test_agent.py  test_config.py  test_downloader.py  test_generator.py  test_ocr.py  test_qwen.py
